--- a/front/prelude.tex
+++ b/front/prelude.tex
@@ -2,7 +2,7 @@
 
 Quantum Field Theory, or QFT, is our most fundamental description of the universe. It combines the lessons of quantum mechanics with the laws of special relativity to create a theory --- the only theory --- consistent with both. Except for gravity, quantum field theory predicts every phenomenon yet observed, with only twenty or so free parameters to be determined by experiment. Below, we provide a short summary of QFT, with links to the chapters in which each topic is discussed. Reviews of relevant mathematical material are provided in appendices at the back of the book.
 
-The need for QFT arose from a variety of sources. Theorists were bothered by the fact that quantum mechanics is inconsistent with relativity\footnote{For example, the \Schrodinger equation is not Lorentz invariant and allows particles to move faster than the speed of light}, while relativity is inconsistent with quantum mechanics\footnote{How can atoms be spacelike or timelike separated if they are fundamentally quantum mechanical wavefunctions with uncertain position?}. Experimentally, new particles such as the positron were starting to be discovered and a theory that could create, destroy, and propagate these particles was necessary.In chapter \ref{chap:intro}, we reconcile these difficulties by presenting QFT as a principle of least action theory. We define action as a hybrid between the quantum mechanical and relativistic actions, and we show that this action can create and destroy particles.
+The need for QFT arose from a variety of sources. Theorists were bothered by the fact that quantum mechanics is inconsistent with relativity\footnote{For example, the \Schrodinger equation is not Lorentz invariant and allows particles to move faster than the speed of light.}, while relativity is inconsistent with quantum mechanics\footnote{How can atoms be spacelike or timelike separated if they are fundamentally quantum mechanical wavefunctions with uncertain position?}. Experimentally, new particles such as the positron were starting to be discovered and a theory that could create, destroy, and propagate these particles was necessary. In chapter \ref{chap:intro}, we reconcile these difficulties by presenting QFT as a principle of least action theory. We define action as a hybrid between the quantum mechanical and relativistic actions, and we show that this action can create and destroy particles.
 
 The left hand side of this principle of least action is an $n$ point correlation functions of particles ($n$PCFs), where $n$ is a positive integer. An $n$PCF may seem like an esoteric object at first, but we show that it is directly connected to scattering (chapter \ref{chap:scattering}). For example, the 4PCF encodes the probability for two particles to scatter off each other\footnote{Two incoming particles plus two outgoing particles equals four particles, hence a 4PCF.}. The 2PCF is special; it encodes many of the characteristic properties of a particle, including its mass, its ability to scatter with and decay into other particles, and even the energies of its bound states (chapter \ref{chap:spectrum}).
 
@@ -14,17 +14,17 @@ We also show that a light scalar particle is able to carry information about the
 
 Having treated the simplest case of a scalar particle, we consider fermions (chapter \ref{chap:spin-one-half})\footnote{Fermions are also called spin one-half particles. Most fundamental particles are fermions, including quarks as well as the electron, neutrino, and other leptons.}. Immediately, we notice that these fermions must behave differently from scalars because of the Pauli exclusion principle, which says that two fermions cannot exist in the same quantum state. but the spin statistics theorem allows us to encode this Pauli exclusion principle in the action, so we can derive $n$PCFs for fermions using the same techniques as with scalars while remaining consistent with the Pauli exclusion principle.
 
-With these $n$PCFs, we propose a new model that binds the neutron to the proton in a nucleus.The model treats protons and neutrons as fermions and proposes a light scalar known as a pion to transfer force between them. We compute several predictions of this model which are consistent with experiment to first order, though experiments also tell us that protons, neutrons, and pions have substructure which this model does not contain. Emboldened, we suggest a similar model for the Coulomb force between a positron and an electron. However, this model cannot explain magnetic fields, so we reject it. \jtd{Symmetry breaking}
+With these $n$PCFs, we propose a new model that binds the neutron to the proton in a nucleus. The model treats protons and neutrons as fermions and proposes a light scalar known as a pion to transfer force between them. We compute several predictions of this model which are consistent with experiment to first order, though experiments also tell us that protons, neutrons, and pions have substructure which this model does not contain. Emboldened, we suggest a similar model for the Coulomb force between a positron and an electron. However, this model cannot explain magnetic fields, so we reject it. \jtd{Symmetry breaking}
 
-In order to pursue magnetic fields, we further consider vector particles (chapter \ref{chap:spin-one})\footnote{Vector particles are also called vector bosons or spin-one particles. All the standard model's force carriers --- the photon, gluon, and W and Z bosons --- are vector bosons.}. Like scalars, these particles are bosons so they do not obey the Pauli exclusion principle and can carry forces. However, a vector particle has too many degrees of freedom to be detectable in four dimensions. We propose the removal of one of these degrees of freedom by suggesting that the vector particle obeys some self-symmetry, in that a certain transformation of the vector field leaves the action invariant. This removes one physical degree of freedom from the particle, making it observable. It also limits the number of possible actions down to a very small number. We choose the simplest action, allow the vector particle to interact with a fermion, and we see that the vector particle has all the properties of a photon. This combined theory of the photon and electron is named Quantum Electrodynamics, or QED. We spend the rest of the chapter showing that it obeys Coulomb's force law, reproduces magnetism, and predicts that an electron has a magnetic dipole moment of about two which is consistent experiment. We also show that this theory does not suffer from the same rarity problems the photon to be massless.
+In order to pursue magnetic fields, we further consider vector particles (chapter \ref{chap:spin-one})\footnote{Vector particles are also called vector bosons or spin-one particles. All the standard model's force carriers --- the photon, gluon, and W and Z bosons --- are vector bosons.}. Like scalars, these particles are bosons so they do not obey the Pauli exclusion principle and can carry forces. However, a vector particle has too many degrees of freedom to be detectable in four dimensions. We propose the removal of one of these degrees of freedom by suggesting that the vector particle obeys some self-symmetry, in that a certain transformation of the vector field leaves the action invariant. This removes one physical degree of freedom from the particle, making it observable. It also limits the number of possible actions down to a very small number. We choose the simplest action, allow the vector particle to interact with a fermion, and we see that the vector particle has all the properties of a photon. This combined theory of the photon and electron is named Quantum Electrodynamics, or QED. We spend the rest of the chapter showing that it obeys Coulomb's force law, reproduces magnetism, and predicts that an electron has a magnetic dipole moment of about two which is consistent experiment. We also show that this theory does not suffer from the same rarity problems, so the photon can be massless.
 
-We would like to compute the predictions of QED to see how well they hold. We start by computing the magnetic moment of the electron $g$ by computing the scattering probability of an electron off the magnetic field. Unfortunately, our results blow up to infinity\footnote{The infinity is due to the sheer number of ways momentum can be transferred from initial states to final states via virtual particles.}! Similarly, the predicted electron charge and mass and the photon energy of QED are all infinite. Two simple physical arguments forestall panic, however. Firstly, the true values are probably merely very large, not infinite, because our equations include interactions in which enormous amounts of momentum are transferred. QFT has not been tested in this regime energies and is probably wrong, so we shouldn't rely on our results for these interactions. Secondly all experiments measure differences between the quantities, and it is possible for a large number minus another large number to be smaller. In chapter \ref{chap:renormalization}, we simulate these arguments mathematically using a process called ``renormalization,'' by removing the infinite part of the equations for the $n$PCFs. This allows us to compute the magnetic moment of the electron and show that it is consistent with the experimental value.
+We would like to compute the predictions of QED to see how well they hold. We start with magnetic moment of the electron $g$ by calculating the scattering probability of an electron off the magnetic field. Unfortunately, our results blow up to infinity\footnote{The infinity is due to the sheer number of ways momentum can be transferred from initial states to final states via virtual particles.}! Similarly, the predicted electron charge and mass and the photon energy of QED are all infinite. Two simple physical arguments forestall panic, however. Firstly, the true values are probably merely very large, not infinite, because our equations include interactions in which enormous amounts of momentum are transferred. QFT has not been tested at these large energies and is probably wrong, so we shouldn't rely on its predictions for these interactions. Secondly all experiments measure differences between the quantities, and it is possible for a large number minus another large number to be small. In chapter \ref{chap:renormalization}, we simulate these arguments mathematically using a process called ``renormalization,'' by removing the infinite part of the equations for the $n$PCFs. This allows us to compute the magnetic moment of the electron and show that it is consistent with the experimental value.
 
 We follow up this victory by using renormalization to compute other phenomena, such as electron-electron scattering probabilities, Compton scattering probabilities, and the Lamb shift in the spectrum of hydrogen. All of these predictions have been confirmed by experiment and marked a crucial step in the historical development of QFT. In the case of electron-electron scattering we notice another infinite prediction, this time arising from the fact that the photon can carry arbitrary amounts of momentum at low energy due to its massless nature. The answer is again that this infinity is canceled with another infinity, this time coming from the fact the same masslessness of the photon allows arbitrarily many very low energy photons to be created in a scattering process without violating energy conservation. When the probability that these photons appear is included, the infinity cancels out.
 
-This concludes our discussion of QED, the theory of the electron and proton. But at the time that QED was wrapping up, a minefield of unrelated new particles were being discovered, demonstrating that QED was not the full story. In part \ref{part:non-abelian}, we discuss how these particles, called mesons, displayed properties with surprising symmetries among each other. We introduce group theory as a mathematical language to discuss these symmetries in chapter \ref{chap:mesons}, and identify these symmetries as the group SU(3). The exact same symmetries would appear if each meson were made of two of three smaller particles, which were named quarks in \jtd{date}. Further investigation shows that hadrons such as the proton and neutron can be made of the same quarks, but this time coming in triplets. We set ourselves the task of including these quarks into QED in a way which is consistent with experiment.
+This concludes our discussion of QED, the theory of the electron and proton. But at the time that QED was wrapping up, a minefield of unrelated new particles were being discovered, demonstrating that QED was not the full story. In part \ref{part:non-abelian}, we discuss how these particles, called mesons, displayed properties with surprising symmetries among each other. We introduce group theory as a mathematical language to discuss these symmetries in chapter \ref{chap:mesons}, and identify these symmetries as the group SU(3). The exact same symmetries would appear if each meson were made of two of three smaller particles, which were named quarks in the 1960s. Further investigation shows that hadrons such as the proton and neutron can be made of the same quarks, but this time coming in triplets. We set ourselves the task of including these quarks into QED in a way which is consistent with experiment.
 
-The first challenge is to explain why all the mesons appear to decay into other particles. QED provides no mechanism for light or electrons to cause this decay, so we require the existence of another vector particle called the W boson to cause these decays. \jtd{Z boson}. We say that the W and Z bosons together carry the weak force. However, the unique pattern of decays that the mesons show require that the W boson does not interact equally with all particles; it only interacts with particles of a certain spin, and it only allows some quarks to convert to others. In particular, the interactions of the up quark are identical to those of the down quark, and likewise for the strange and charm quarks and the up and down quarks. But this symmetry --- SU(2) in group theory language --- does not old fully because the quarks in each pair do not have the same masses. To solve this problem, we propose the existence of a new, scalar particle called the Higgs which could give rise to such a pattern of interactions and masses. This Higgs particle, discovered in 2012, was the last particle in the standard model to be observed.
+The first challenge is to explain why all the mesons appear to decay into other particles. QED provides no mechanism for light or electrons to cause this decay, so we require the existence of another vector particle called the W boson. \jtd{Z boson}. We say that the W and Z bosons together carry the weak force. However, the unique pattern of decays that the mesons show require that the W boson does not interact equally with all particles; it only interacts with particles of a certain spin, and it only allows some quarks to convert to others. In particular, the interactions of the up quark are identical to those of the down quark, and likewise for the strange and charm quarks and the up and down quarks. But this pairwise symmetry --- SU(2) in group theory language --- does not old fully because the quarks in each pair do not have the same masses. To solve this problem, we propose the existence of a new, scalar particle called the Higgs which could give rise to such a pattern of interactions even though the quark masses are different. This Higgs particle, discovered in 2012, was the last particle in the Standard Model to be observed.
 
 A second experimental fact that quarks and electrons are attracted to each other electromagnetically. This implies that quarks are charged, but raises the problem that quarks should repel each other. If they do, then how can quarks group into pairs and triplets to make mesons and hadrons? Another new particle is required --- one that carries an attractive force stronger than both electromagnetism and the weak force. We name this particle and force the gluon and strong force respectively. The gluon is another vector boson like the photon and W and Z bosons, and it attracts quarks into mesons and hadrons in the observed way if the equivalent of the electric charge for the gluon can take one of three values. We usually refer to this gluon-charge as color charge, and the three values as red, green, and blue. Then we require an SU(3) symmetry between the three colors of quarks so that they have identical masses.
 
@@ -32,10 +32,10 @@ There is only one more problem to solve: why are quarks never observed by themse
 
 With the discussion of the gluon concluded, we can now understand all the fundamental particles. However, the action for all these particles is obscenely long and seemingly arbitrary. The Higgs mechanism for the weak theory inspires us to write a simpler Lagrangian under a larger symmetry and use the Higgs particle to break the symmetry and create the masses we observe. This larger symmetry is simply the combination of the symmetries we have already discussed: U(1) for the photon's self-symmetry and the electromagnetic force, SU(2) for the weak force, and SU(3) for the strong force\footnote{This combination is named SU(3)$\times$SU(2)$\times$U(1), where $\times$ is pronounced ``cross''.}. The new action is much simpler and is almost always consistent with experiment. There are only a few vagueries to be cleared up, which we discuss in the final chapter.
 
-Firstly, this action predicts that neutrinos are massless, which is not the case. It also predicts the existence of a fourth neutrino called the sterile neutrino which has not been detected. Possible solutions exist to both these problems but whether they are correct remains a mystery. Another problem for QFT at the current moment is that it does not predict the existence of a dark matter particle, though one could be added as a new particle which interacts only weakly with standard model particles, and therefore is very difficult to detect. This new particle could be another fermion, or a new kind of particle similar to a magnetic monopole called an axion.
+Firstly, this action predicts that neutrinos are massless, which is not the case. It also predicts the existence of a fourth neutrino called the sterile neutrino which has not been detected. Possible solutions exist to both these problems but whether they are correct remains a mystery. Another problem for QFT at the current moment is that it does not predict the existence of a dark matter particle, though one could be added as a new particle which interacts only weakly with standard model particles and is therefore very difficult to detect. This new particle could be another fermion, or a new kind of particle similar to a magnetic monopole called an axion.
 
-Beyond the problem of whether the particle content of the standard model is correct, there is the question of verifying its predictions for hadrons. Due to the non-perturbative nature of gluons, it is much harder to estimate important properties such as hadron masses than it is to compute other QFT properties, but progress has been made in the field of Lattice QCD which numerically evaluates the $n$PCFs via the QFT principle of least action. With Lattice QCD, the experimental measurements of hadron masses have been confirmed among many other properties. Though there is some question of whether its predictions for the interaction strengths of hadrons are fully correct because the current prediction for the magnetic moment of the electron differs from the experimental value by $5\sigma$.
+Beyond the problem of whether the particle content of the standard model is correct, there is the question of verifying its predictions for hadrons. Due to the non-perturbative nature of gluons, it is much harder to estimate important properties such as hadron masses than it is to compute other QFT properties, but progress has been made in the field of Lattice QCD which numerically evaluates the $n$PCFs via the QFT principle of least action. With Lattice QCD, the experimental measurements of hadron masses have been confirmed among many other properties. Though there is some question of whether its predictions for the interaction strengths of hadrons are fully correct because of tension between Lattice QCD, a more traditional theory prediction, and experiment regarding the value of the magnetic moment of the muon.
 
-Many theorists are also concerned with the remaining arbitrarity of the standard model. Why are there exactly six quarks? Why are the particle masses what we observe them to be? Why do the electromagnetic, weak, and strong forces differ so much in strength? A similar question stems from the fact that the standard model action is missing a few terms which could be added without violating any known physical principles. Why are these terms missing?
+Many theorists are also concerned with the remaining arbitrariness of the standard model. Why are there exactly six quarks? Why are the particle masses what we observe them to be? Why do the electromagnetic, weak, and strong forces differ so much in strength? A similar question stems from the fact that the standard model action is missing a few terms which could be added without violating any known physical principles. Why are these terms missing?
 
 Finally, many theorists are working to create a version of QFT which is includes gravity. Many candidate theories have been proposed, but no decisive deviations from the standard model have been observed beyond those mentioned above, so these theories cannot yet be tested.
