Plane wave states

--- a/content/appendices.tex
+++ b/content/appendices.tex
@@ -34,6 +34,9 @@ The last detail we need is that of complex Grassmann numbers, which are defined 
 \subsection{Wick's theorem for Grassmann numbers}
 \jtd{Do this}
 
+\chapter{Connecting Spin and Spinors}
+\label{app:spin-spinors}
+
 
 \chapter{Particles of the Standard Model}
 \chapter{Encyclopedia of Quantum Field Theories}
@@ -41,5 +44,4 @@ The last detail we need is that of complex Grassmann numbers, which are defined 
 \chapter{Second Quantization}
 \chapter{Lattice QCD}
 \chapter{Spin 2 Particles and Gravitons}
-\chapter{Noether's Theorem}
 \label{app:noether}
